--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -24,6 +24,9 @@ dependencies {
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	implementation 'org.modelmapper:modelmapper:2.1.1'
+//	implementation 'org.slf4j:slf4j-api:1.7.25'
+	testImplementation 'org.slf4j:slf4j-simple:1.6.1'
 
 	runtimeOnly 'org.postgresql:postgresql'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
