--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -16,6 +16,8 @@ spring:
     store-type: jdbc
 server:
   port: 8080
+  servlet:
+    context-path: /api
 logging.level:
   org:
     springframework:
