--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -16,12 +16,10 @@ spring:
     store-type: jdbc
 server:
   port: 8080
-  servlet:
-    context-path: /api
 logging.level:
   org:
     springframework:
       web: TRACE
-    hibernate: INFO
+    hibernate: TRACE
   com.mcueen.auth: TRACE
 
