--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -20,6 +20,6 @@ logging.level:
   org:
     springframework:
       web: DEBUG
-    hibernate: DEBUG
+    hibernate: INFO
   com.mcueen.auth: DEBUG
 
