--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -8,8 +8,7 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create
-      properties:
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
